@@ -204,8 +204,8 @@ package TestCase::Complex {
     return 0;
   }
 
-  sub test_complex_array : int () {
-    my $z_array = complex_array(
+  sub test_complex_darray : int () {
+    my $z_array = complex_darray(
       [DBL_MIN(), 2, 4],
       [(double)1, 3, 5]
     );
